# wagtail-link-block

./: .bumpversion.toml  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: matrix.py
.github/workflows/: ci.yml  publish.yml
requirements/: local.txt  testing.txt
tests/: settings.py  test_blocks.py
wagtail_link_block/: blocks.py  wagtail_hooks.py
wagtail_link_block/locale/fr/LC_MESSAGES/: django.mo  django.po
wagtail_link_block/static/link_block/: link_block.css  link_block.js
wagtail_link_block/templates/blocks/: link_block.html
wagtail_link_block/templates/wagtailadmin/block_forms/: link_block.html
